[tool.poetry]
name = "WebSite"
version = "0.1.0"
description = ""
authors = ["kanishk-nd <kanishk.varshney@netradyne.com>"]

[tool.poetry.dependencies]
python = "^2.7"
flask = "^1.1.1"
flask-wtf = "^0.14.3"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
